Добавлена функциональность рекомендации